--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
   "name": "custom-button",
+  "main": "build/index.js",
+  "files": [
+    "build"
+  ],
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "prepare": "vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
