--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,8 @@
 {
+  "declaration": true,
+  "sourceMap": true,
+  "outDir": "./build",
+  "rootDir": "./src",
   "compilerOptions": {
     "target": "ES2020",
     "useDefineForClassFields": true,
