--- a/package.json
+++ b/package.json
@@ -1,15 +1,12 @@
 {
   "name": "custom-button",
-  "main": "build/index.js",
-  "files": [
-    "build"
-  ],
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "types": "./types/index.d.ts",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc & vite build",
     "prepare": "npm run build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
@@ -19,6 +16,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@rollup/plugin-typescript": "^11.1.1",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
@@ -27,6 +25,8 @@
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "path": "^0.12.7",
+    "rollup-plugin-typescript-paths": "^1.4.0",
     "typescript": "^5.0.2",
     "vite": "^4.3.9"
   }
