--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-react-refresh": "^0.3.4",
     "path": "^0.12.7",
     "rollup-plugin-typescript-paths": "^1.4.0",
+    "sass": "^1.62.1",
     "typescript": "^5.0.2",
     "vite": "^4.3.9"
   }
