--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sass": "^1.62.1"
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "^11.1.1",
@@ -27,7 +28,6 @@
     "eslint-plugin-react-refresh": "^0.3.4",
     "path": "^0.12.7",
     "rollup-plugin-typescript-paths": "^1.4.0",
-    "sass": "^1.62.1",
     "typescript": "^5.0.2",
     "vite": "^4.3.9"
   }
