fix: export file name from main to index

--- a/package.json
+++ b/package.json
@@ -1,15 +1,10 @@
 {
   "name": "custom-button",
+  "mail": "./dist/index.js",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "types": "./types/index.d.ts",
-  "exports": {
-    ".": {
-      "import": "./dist/main.js",
-      "require": "./dist/main.cjs"
-    }
-  },
   "scripts": {
     "dev": "vite",
     "build": "tsc & vite build",
