--- a/package.json
+++ b/package.json
@@ -17,6 +17,11 @@
     "react-dom": "^18.2.0",
     "sass": "^1.62.1"
   },
+  "peerDependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "sass": "^1.62.1"
+  },
   "devDependencies": {
     "@rollup/plugin-typescript": "^11.1.1",
     "@types/react": "^18.0.37",
